@@ -1,4 +1,7 @@
-* Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
+* Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0
+- Removed Puppet 4 support
+- Added Puppet 6 support
+- Added puppetlabs-stdlib 6 support
 - Maintenance: removed OBE build/rpm_metadata/requires
 
 * Mon Jan 07 2019 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.1
